src/objects/BGCK__Question__c.object
<CustomObject>
    <fields>
        <fullName>Allow_Multiple_Question_Groups__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This fields determines whether a Question Group is repeatable or not</description>
        <label>Allow Multiple Question Groups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Method__c</fullName>
        <label>Application Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attachment_Required__c</fullName>
        <label>Attachment Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BGCK__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGCK__Body__c</fullName>
        <label>Body</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BGCK__Checklist_Version__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Checklist Version</label>
        <referenceTo>BGCK__Checklist_Version__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGCK__Criteria__c</fullName>
        <label>Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGCK__Historical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Historical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGCK__Question_Number__c</fullName>
        <label>Question Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGCK__Question_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Type</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>BGCK__Question_Type__c.BGCK__Checklist_Version__r.BGCK__Status__c</field>
                <operation>equals</operation>
                <value>Draft</value>
            </filterItems>
            <filterItems>
                <field>BGCK__Question_Type__c.BGCK__Checklist_Version__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>$Source.BGCK__Checklist_Version__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BGCK__Question_Type__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGCK__Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Question</label>
        <referenceTo>BGCK__Question__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGCK__Section_Name__c</fullName>
        <label>Section Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGCK__Tip__c</fullName>
        <label>Tip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGCK__Track_No__c</fullName>
        <externalId>true</externalId>
        <label>Tracking Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BGCK__isOptional__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if true, do not enforce question to be answered on save or save and complete</description>
        <label>Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chevron_Type__c</fullName>
        <label>Chevron Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Legal Background</fullName>
                </value>
                <value>
                    <fullName>Questions</fullName>
                </value>
                <value>
                    <fullName>Financial Guarantee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Question_Group__c</fullName>
        <formula>BGCK__Question__r.Question_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Question Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance_Field_API_Name__c</fullName>
        <description>This field contains the API name of the compliance field on the object in the &quot;Parent Object Field API Name&quot; field.</description>
        <inlineHelpText>Please ensure that the field is on the object in the &quot;Parent Object Field API Name&quot; field.</inlineHelpText>
        <label>Compliance Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credential_Type__c</fullName>
        <label>Credential Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Credential_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credential__c</fullName>
        <label>Credential</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Credential</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Data_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Display_Style__c</fullName>
        <label>Display Style</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Display_Style</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eli_Ques_determines_App_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligibility questions determine appType</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Answer_Parent_Field_Value_Map__c</fullName>
        <label>Expected Answer Parent Field Value Map</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_ID_of_Question_type__c</fullName>
        <formula>BGCK__Question_Type__r.External_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External ID of Question type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id_of_Parent__c</fullName>
        <formula>BGCK__Question__r.External_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Id of Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Any_Submission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Any Submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_dependent_questions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has dependent questions?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Background_Question__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal Background Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mulesoft_External_Id__c</fullName>
        <label>Mulesoft External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Object_API_Name__c</fullName>
        <label>Parent Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Object_Field_API_Name__c</fullName>
        <label>Parent Object Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit_Type__c</fullName>
        <label>Permit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Permit_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Possible_Responses__c</fullName>
        <label>Possible Responses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Question_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Question Version</label>
        <referenceTo>BGCK__Question__c</referenceTo>
        <relationshipLabel>Questions (Previous Question Version)</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Area__c</fullName>
        <label>Program Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualifying_Response__c</fullName>
        <label>Qualifying Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QuestionFieldAPI__c</fullName>
        <label>QuestionFieldAPI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionObjectName__c</fullName>
        <label>QuestionObjectName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Body__c</fullName>
        <label>Question Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Question_Group__c</fullName>
        <label>Question Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Sub_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Sub Section</label>
        <referenceTo>Application_Subsection__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Questions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_is_Compliance_Related__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Question is Compliance Related?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Order__c</fullName>
        <label>Section Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Request_Type__c</fullName>
        <label>Service Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Change Name</fullName>
                </value>
                <value>
                    <fullName>Withdraw Application</fullName>
                </value>
                <value>
                    <fullName>Exam Re-Application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_For__c</fullName>
        <label>Show For</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Answer</fullName>
                </value>
                <value>
                    <fullName>Credential</fullName>
                </value>
                <value>
                    <fullName>Credential Renewal</fullName>
                </value>
                <value>
                    <fullName>Credential Reinstatement</fullName>
                </value>
                <value>
                    <fullName>Permit</fullName>
                </value>
                <value>
                    <fullName>Permit Renewal</fullName>
                </value>
                <value>
                    <fullName>Permit Reinstatement</fullName>
                </value>
                <value>
                    <fullName>Service Request</fullName>
                </value>
                <value>
                    <fullName>License</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Header__c</fullName>
        <label>Sub Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Sub_Header__c</fullName>
        <label>Sub Sub Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Title__c</fullName>
        <label>Submission Title</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Triggering_Comment_Box_Value__c</fullName>
        <label>Triggering Comment Box Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Triggering_Field_API_Name__c</fullName>
        <label>Triggering Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Triggering_Field_Value__c</fullName>
        <label>Triggering Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Triggering_Parent_Answer__c</fullName>
        <label>Triggering Parent Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WADOL_Mulesoft_Ext_Id__c</fullName>
        <externalId>true</externalId>
        <label>Mulesoft Ext Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BGCK__Active__c</columns>
        <columns>BGCK__Question_Type__c</columns>
        <columns>BGCK__Section_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Question Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <recordTypes>
        <fullName>Background_Information</fullName>
        <active>true</active>
        <label>Background Information</label>
    </recordTypes>
    <recordTypes>
        <fullName>Background_Questions</fullName>
        <active>true</active>
        <label>Background Questions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Educational_Background_Questions</fullName>
        <active>true</active>
        <label>Educational Background Questions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Eligibility_Questions</fullName>
        <active>true</active>
        <label>Eligibility Questions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Endorsement</fullName>
        <active>true</active>
        <label>Endorsement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Financial_Guarantee</fullName>
        <active>true</active>
        <label>Financial Guarantee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Review_and_Submit</fullName>
        <active>true</active>
        <label>Review and Submit</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>